--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cuid": "^2.1.6",
+    "pouchdb-adapter-idb": "^7.1.1",
+    "pouchdb-adapter-memory": "^7.1.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
-    "styled-components": "^4.3.2"
+    "rxdb": "^8.4.0",
+    "rxjs": "^6.5.2",
+    "styled-components": "^4.3.2",
+    "styled-icons": "^8.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
