--- a/package.json
+++ b/package.json
@@ -3,11 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.0",
+    "apollo-cache-inmemory": "^1.6.3",
+    "apollo-client": "^2.6.4",
+    "apollo-link-http": "^1.5.16",
+    "auth0-js": "^9.11.3",
     "cuid": "^2.1.6",
+    "express": "^4.17.1",
+    "graphql": "^14.5.5",
+    "graphql-tag": "^2.10.1",
     "pouchdb-adapter-idb": "^7.1.1",
     "pouchdb-adapter-memory": "^7.1.1",
     "react": "^16.9.0",
+    "react-apollo": "^3.1.0",
     "react-dom": "^16.9.0",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "rxdb": "^8.4.0",
     "rxjs": "^6.5.2",
@@ -15,7 +26,7 @@
     "styled-icons": "^8.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
