--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "styled-icons": "^8.3.0"
   },
   "scripts": {
+    "dev": "react-scripts start",
     "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
