--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "apollo-link-http": "^1.5.16",
     "auth0-js": "^9.11.3",
     "cuid": "^2.1.6",
+    "debounce": "^1.2.0",
     "express": "^4.17.1",
     "graphql": "^14.5.5",
     "graphql-tag": "^2.10.1",
