Added Cursor component. Added column for task duration.

--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "apollo-link-http": "^1.5.16",
     "auth0-js": "^9.11.3",
     "cuid": "^2.1.6",
-    "debounce": "^1.2.0",
+    "date-fns": "^2.2.1",
     "express": "^4.17.1",
     "graphql": "^14.5.5",
     "graphql-tag": "^2.10.1",
+    "lodash": "^4.17.15",
     "pouchdb-adapter-idb": "^7.1.1",
     "pouchdb-adapter-memory": "^7.1.1",
     "react": "^16.9.0",
