--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
     "apollo-link-http": "^1.5.16",
+    "apollo-link-ws": "^1.0.19",
     "auth0-js": "^9.11.3",
     "cuid": "^2.1.6",
     "date-fns": "^2.2.1",
@@ -25,7 +26,8 @@
     "rxdb": "^8.4.0",
     "rxjs": "^6.5.2",
     "styled-components": "^4.3.2",
-    "styled-icons": "^8.3.0"
+    "styled-icons": "^8.3.0",
+    "subscriptions-transport-ws": "^0.9.16"
   },
   "scripts": {
     "dev": "react-scripts start",
